# django-cricket-statistics

./: .travis.yml  manage.py  pyproject.toml  setup.cfg  tox.ini
django_cricket_statistics/: admin.py  models.py  statistics.py  tests.py  urls.py  views.py
django_cricket_statistics/migrations/: 0002_auto_20200905_0345.py  0003_auto_20200916_0306.py  0004_create_first_eleven_data.py  0005_assign_first_eleven_number.py
django_cricket_statistics/templates/admin/: change_form.html  tabular.html
django_cricket_statistics/templates/django_cricket_statistics/: base.html  checks.html  index.html  links_index.html  paginator.html  player_detail.html  player_list.html  players.html  statistic_list.html  statistics_index.html  table.html
django_cricket_statistics/templates/django_cricket_statistics/includes/: links.html  paginator.html  table.html
django_cricket_statistics/templates/statistics/: chart.html  default_table.html  index.html  layout_tables.html  player_career.html  players.html  sorted_statistics.html  template_listlinks.html  template_master.html  template_paginator.html
django_cricket_statistics/templatetags/: __init__.py  getattr.py  query_update.py
django_cricket_statistics/views/: __init__.py  batting.py  bowling.py  common.py  fielding.py  indices.py  misc.py  player.py  players.py  statistic_index.py  statistics.py  wicketkeeping.py
tests/: test_models.py  test_settings.py
tests/static/: dcs.css  dcs.js
tests/templates/: base.html
tests/templates/django_cricket_statistics/: index.html  link_index.html  links_index.html  player_list.html  statistic_list.html  statistics_index.html
