[metadata]
name = django-cricket-statistics
description = A Django app for cricket statistics
long_description = file:README.rst
long_description_content_type = text/x-rst
license = Apache License, Version 2
classifiers =
    Framework :: Django :: 3.0
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    Django~=3.0.0

[pycodestyle]
# E203: Whitespace before ':'
# W503: Line break before binary operator
max-line-length = 88
ignore=E203,W503

[pydocstyle]
match_dir = ^(?!migrations).*
# D413: Missing blank line after last section
add_ignore = D413
convention = google

[pylint.MASTER]
ignore = migrations
disable = C0330, W0511
