[metadata]
name = django-cricket-statistics
description = A Django app for cricket statistics
long_description = file:README.rst
long_description_content_type = text/x-rst
license = Apache License, Version 2
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
packages = find:
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    Django~=3.1.0

[options.packages.find]
exclude = tests

[pycodestyle]
# E203: Whitespace before ':'
# W503: Line break before binary operator
max-line-length = 88
ignore=E203,W503
exclude=.git,.tox,migrations

[pydocstyle]
match_dir = ^(?!migrations).*
# D413: Missing blank line after last section
add_ignore = D413
convention = google

[pylint.MASTER]
# R0903: Too few public methods
disable = C0330, R0903, W0511
ignore = migrations
# TODO: why doesn't this work
# load-plugins=pylint_django

[pylint.DESIGN]
# django views often have a lot of ancestors
max-parents = 15

[pylin.SIMILARITIES]
# Minimum lines number of a similarity.
min-similarity-lines = 5

[mypy-django_cricket_statistics.migrations.*]
ignore_errors = True

[tool:pytest]
django_find_project = false
DJANGO_SETTINGS_MODULE = tests.test_settings

[coverage:run]
omit = django_cricket_statistics/migrations/*
